[gd_scene load_steps=46 format=3 uid="uid://c4xbwd1v6dq66"]

[ext_resource type="Script" uid="uid://bs43i244iu75i" path="res://player/stella/stella_skin/stella_skin.gd" id="1_x2sb8"]
[ext_resource type="PackedScene" uid="uid://du7pdxqehsynj" path="res://player/stella/stella_imported/stella_imported.tscn" id="2_jgdfw"]
[ext_resource type="Script" uid="uid://bw57lam71k4nc" path="res://addons/wigglebone/wiggle_rotation_modifier_3d.gd" id="3_28cev"]
[ext_resource type="Script" uid="uid://doiljl6jqu0bg" path="res://addons/wigglebone/wiggle_rotation_properties_3d.gd" id="4_7jwm2"]
[ext_resource type="Resource" uid="uid://oc8l0qgppsxo" path="res://player/stella/stella_skin/jiggle_antenea.tres" id="4_rwrfb"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qeq6d"]
animation = &"holding"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e2fuu"]
animation = &"fall"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_brpbe"]
filter_enabled = true
filters = ["Stella/Skeleton3D:bicep_left", "Stella/Skeleton3D:bicep_right", "Stella/Skeleton3D:forearm_left", "Stella/Skeleton3D:forearm_right", "Stella/Skeleton3D:hand_left", "Stella/Skeleton3D:hand_right", "Stella/Skeleton3D:index1_left", "Stella/Skeleton3D:index1_right", "Stella/Skeleton3D:index2_left", "Stella/Skeleton3D:index2_right", "Stella/Skeleton3D:index3_left", "Stella/Skeleton3D:index3_right", "Stella/Skeleton3D:middle1_left", "Stella/Skeleton3D:middle1_right", "Stella/Skeleton3D:middle2_left", "Stella/Skeleton3D:middle2_right", "Stella/Skeleton3D:middle3_left", "Stella/Skeleton3D:middle3_right", "Stella/Skeleton3D:pinky1_left", "Stella/Skeleton3D:pinky1_right", "Stella/Skeleton3D:pinky2_left", "Stella/Skeleton3D:pinky2_right", "Stella/Skeleton3D:pinky3_left", "Stella/Skeleton3D:pinky3_right", "Stella/Skeleton3D:ring1_left", "Stella/Skeleton3D:ring1_right", "Stella/Skeleton3D:ring2_left", "Stella/Skeleton3D:ring2_right", "Stella/Skeleton3D:ring3_left", "Stella/Skeleton3D:ring3_right", "Stella/Skeleton3D:shoulder_left", "Stella/Skeleton3D:shoulder_right", "Stella/Skeleton3D:thumb1_left", "Stella/Skeleton3D:thumb1_right", "Stella/Skeleton3D:thumb2_left", "Stella/Skeleton3D:thumb2_right"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_x14j7"]
graph_offset = Vector2(-299, 107)
nodes/Animation/node = SubResource("AnimationNodeAnimation_e2fuu")
nodes/Animation/position = Vector2(-60, 140)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_qeq6d")
"nodes/Animation 2/position" = Vector2(-60, 280)
"nodes/Fall & Hold/node" = SubResource("AnimationNodeBlend2_brpbe")
"nodes/Fall & Hold/position" = Vector2(140, 140)
node_connections = [&"Fall & Hold", 0, &"Animation", &"Fall & Hold", 1, &"Animation 2", &"output", 0, &"Fall & Hold"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8doqg"]
animation = &"holding"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b3atg"]
animation = &"griddy"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q1my6"]
animation = &"idle"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_jr771"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_y5rlm"]
filter_enabled = true
filters = ["Stella/Skeleton3D:bicep_left", "Stella/Skeleton3D:bicep_right", "Stella/Skeleton3D:forearm_left", "Stella/Skeleton3D:forearm_right", "Stella/Skeleton3D:hand_left", "Stella/Skeleton3D:hand_right", "Stella/Skeleton3D:index1_left", "Stella/Skeleton3D:index1_right", "Stella/Skeleton3D:index2_left", "Stella/Skeleton3D:index2_right", "Stella/Skeleton3D:index3_left", "Stella/Skeleton3D:index3_right", "Stella/Skeleton3D:middle1_left", "Stella/Skeleton3D:middle1_right", "Stella/Skeleton3D:middle2_left", "Stella/Skeleton3D:middle2_right", "Stella/Skeleton3D:middle3_left", "Stella/Skeleton3D:middle3_right", "Stella/Skeleton3D:pinky1_left", "Stella/Skeleton3D:pinky1_right", "Stella/Skeleton3D:pinky2_left", "Stella/Skeleton3D:pinky2_right", "Stella/Skeleton3D:pinky3_left", "Stella/Skeleton3D:pinky3_right", "Stella/Skeleton3D:ring1_left", "Stella/Skeleton3D:ring1_right", "Stella/Skeleton3D:ring2_left", "Stella/Skeleton3D:ring2_right", "Stella/Skeleton3D:ring3_left", "Stella/Skeleton3D:ring3_right", "Stella/Skeleton3D:shoulder_left", "Stella/Skeleton3D:shoulder_right", "Stella/Skeleton3D:thumb1_left", "Stella/Skeleton3D:thumb1_right", "Stella/Skeleton3D:thumb2_left", "Stella/Skeleton3D:thumb2_right"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_o6cix"]
graph_offset = Vector2(-368.093, 4.24928)
nodes/Animation/node = SubResource("AnimationNodeAnimation_q1my6")
nodes/Animation/position = Vector2(-220, 140)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_8doqg")
"nodes/Animation 2/position" = Vector2(-220, 300)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_b3atg")
"nodes/Animation 3/position" = Vector2(40, 380)
"nodes/Idle & Griddy/node" = SubResource("AnimationNodeBlend2_jr771")
"nodes/Idle & Griddy/position" = Vector2(260, 120)
"nodes/Idle & Hold/node" = SubResource("AnimationNodeBlend2_y5rlm")
"nodes/Idle & Hold/position" = Vector2(40, 140)
nodes/output/position = Vector2(460, 160)
node_connections = [&"Idle & Griddy", 0, &"Idle & Hold", &"Idle & Griddy", 1, &"Animation 3", &"Idle & Hold", 0, &"Animation", &"Idle & Hold", 1, &"Animation 2", &"output", 0, &"Idle & Griddy"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d1qwm"]
animation = &"holding"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r8sld"]
animation = &"jump"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_t51tp"]
filter_enabled = true
filters = ["Stella/Skeleton3D:bicep_left", "Stella/Skeleton3D:bicep_right", "Stella/Skeleton3D:forearm_left", "Stella/Skeleton3D:forearm_right", "Stella/Skeleton3D:hand_left", "Stella/Skeleton3D:hand_right", "Stella/Skeleton3D:index1_left", "Stella/Skeleton3D:index1_right", "Stella/Skeleton3D:index2_left", "Stella/Skeleton3D:index2_right", "Stella/Skeleton3D:index3_left", "Stella/Skeleton3D:index3_right", "Stella/Skeleton3D:middle1_left", "Stella/Skeleton3D:middle1_right", "Stella/Skeleton3D:middle2_left", "Stella/Skeleton3D:middle2_right", "Stella/Skeleton3D:middle3_left", "Stella/Skeleton3D:middle3_right", "Stella/Skeleton3D:pinky1_left", "Stella/Skeleton3D:pinky1_right", "Stella/Skeleton3D:pinky2_left", "Stella/Skeleton3D:pinky2_right", "Stella/Skeleton3D:pinky3_left", "Stella/Skeleton3D:pinky3_right", "Stella/Skeleton3D:ring1_left", "Stella/Skeleton3D:ring1_right", "Stella/Skeleton3D:ring2_left", "Stella/Skeleton3D:ring2_right", "Stella/Skeleton3D:ring3_left", "Stella/Skeleton3D:ring3_right", "Stella/Skeleton3D:shoulder_left", "Stella/Skeleton3D:shoulder_right", "Stella/Skeleton3D:thumb1_left", "Stella/Skeleton3D:thumb1_right", "Stella/Skeleton3D:thumb2_left", "Stella/Skeleton3D:thumb2_right"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_jc6s3"]
graph_offset = Vector2(-432, 142)
nodes/Animation/node = SubResource("AnimationNodeAnimation_r8sld")
nodes/Animation/position = Vector2(-80.1653, 175.207)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_d1qwm")
"nodes/Animation 2/position" = Vector2(-80, 320)
"nodes/Jump & Hold/node" = SubResource("AnimationNodeBlend2_t51tp")
"nodes/Jump & Hold/position" = Vector2(140, 140)
node_connections = [&"Jump & Hold", 0, &"Animation", &"Jump & Hold", 1, &"Animation 2", &"output", 0, &"Jump & Hold"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wpkm3"]
animation = &"holding"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y6jp7"]
animation = &"running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_37los"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7ksix"]
animation = &"run"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_htvav"]
filter_enabled = true
filters = ["Stella/Skeleton3D:frontbang", "Stella/Skeleton3D:sidebang_left", "Stella/Skeleton3D:sidebang_right"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_mff1l"]
filter_enabled = true
filters = ["Stella/Skeleton3D:bicep_left", "Stella/Skeleton3D:bicep_right", "Stella/Skeleton3D:forearm_left", "Stella/Skeleton3D:forearm_right", "Stella/Skeleton3D:hand_left", "Stella/Skeleton3D:hand_right", "Stella/Skeleton3D:index1_left", "Stella/Skeleton3D:index1_right", "Stella/Skeleton3D:index2_left", "Stella/Skeleton3D:index2_right", "Stella/Skeleton3D:index3_left", "Stella/Skeleton3D:index3_right", "Stella/Skeleton3D:middle1_left", "Stella/Skeleton3D:middle1_right", "Stella/Skeleton3D:middle2_left", "Stella/Skeleton3D:middle2_right", "Stella/Skeleton3D:middle3_left", "Stella/Skeleton3D:middle3_right", "Stella/Skeleton3D:pinky1_left", "Stella/Skeleton3D:pinky1_right", "Stella/Skeleton3D:pinky2_left", "Stella/Skeleton3D:pinky2_right", "Stella/Skeleton3D:pinky3_left", "Stella/Skeleton3D:pinky3_right", "Stella/Skeleton3D:ring1_left", "Stella/Skeleton3D:ring1_right", "Stella/Skeleton3D:ring2_left", "Stella/Skeleton3D:ring2_right", "Stella/Skeleton3D:ring3_left", "Stella/Skeleton3D:ring3_right", "Stella/Skeleton3D:shoulder_left", "Stella/Skeleton3D:shoulder_right", "Stella/Skeleton3D:thumb1_left", "Stella/Skeleton3D:thumb1_right", "Stella/Skeleton3D:thumb2_left", "Stella/Skeleton3D:thumb2_right"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_ys1wu"]
filter_enabled = true
filters = ["Stella/Skeleton3D:bicep_left", "Stella/Skeleton3D:bicep_right", "Stella/Skeleton3D:forearm_left", "Stella/Skeleton3D:forearm_right", "Stella/Skeleton3D:hand_left", "Stella/Skeleton3D:hand_right", "Stella/Skeleton3D:index1_left", "Stella/Skeleton3D:index1_right", "Stella/Skeleton3D:index2_left", "Stella/Skeleton3D:index2_right", "Stella/Skeleton3D:index3_left", "Stella/Skeleton3D:index3_right", "Stella/Skeleton3D:middle1_left", "Stella/Skeleton3D:middle1_right", "Stella/Skeleton3D:middle2_left", "Stella/Skeleton3D:middle2_right", "Stella/Skeleton3D:middle3_left", "Stella/Skeleton3D:middle3_right", "Stella/Skeleton3D:pinky1_left", "Stella/Skeleton3D:pinky1_right", "Stella/Skeleton3D:pinky2_left", "Stella/Skeleton3D:pinky2_right", "Stella/Skeleton3D:pinky3_left", "Stella/Skeleton3D:pinky3_right", "Stella/Skeleton3D:ring1_left", "Stella/Skeleton3D:ring1_right", "Stella/Skeleton3D:ring2_left", "Stella/Skeleton3D:ring2_right", "Stella/Skeleton3D:ring3_left", "Stella/Skeleton3D:ring3_right", "Stella/Skeleton3D:shoulder_left", "Stella/Skeleton3D:shoulder_right", "Stella/Skeleton3D:thumb1_left", "Stella/Skeleton3D:thumb1_right", "Stella/Skeleton3D:thumb2_left", "Stella/Skeleton3D:thumb2_right"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_o8yux"]
graph_offset = Vector2(-384.745, 18.6118)
nodes/Animation/node = SubResource("AnimationNodeAnimation_7ksix")
nodes/Animation/position = Vector2(-480, 160)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_wpkm3")
"nodes/Animation 2/position" = Vector2(-340, 400)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_y6jp7")
"nodes/Animation 3/position" = Vector2(-120, 360)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_37los")
"nodes/Animation 4/position" = Vector2(180, 360)
"nodes/Filter Bangs Run/node" = SubResource("AnimationNodeBlend2_htvav")
"nodes/Filter Bangs Run/position" = Vector2(340, 100)
"nodes/Run & Hold/node" = SubResource("AnimationNodeBlend2_mff1l")
"nodes/Run & Hold/position" = Vector2(-120, 140)
"nodes/Run & Running/node" = SubResource("AnimationNodeBlend2_ys1wu")
"nodes/Run & Running/position" = Vector2(100, 120)
nodes/output/position = Vector2(520, 100)
node_connections = [&"Filter Bangs Run", 0, &"Run & Running", &"Filter Bangs Run", 1, &"Animation 4", &"Run & Hold", 0, &"Animation", &"Run & Hold", 1, &"Animation 2", &"Run & Running", 0, &"Run & Hold", &"Run & Running", 1, &"Animation 3", &"output", 0, &"Filter Bangs Run"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_as1wm"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bqh0a"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_onqi1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ux0cw"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8g6od"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ajsss"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8tems"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w5ewm"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3oxys"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_deshh"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vkkif"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t04p0"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qstqp"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5mhl2"]
states/Fall/node = SubResource("AnimationNodeBlendTree_x14j7")
states/Fall/position = Vector2(420, 302)
states/Idle/node = SubResource("AnimationNodeBlendTree_o6cix")
states/Idle/position = Vector2(200, 190)
states/Jump/node = SubResource("AnimationNodeBlendTree_jc6s3")
states/Jump/position = Vector2(420, 190)
states/Run/node = SubResource("AnimationNodeBlendTree_o8yux")
states/Run/position = Vector2(200, 302)
transitions = ["Run", "Idle", SubResource("AnimationNodeStateMachineTransition_as1wm"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_bqh0a"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_onqi1"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_ux0cw"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_8g6od"), "Run", "Fall", SubResource("AnimationNodeStateMachineTransition_ajsss"), "Fall", "Run", SubResource("AnimationNodeStateMachineTransition_8tems"), "Jump", "Fall", SubResource("AnimationNodeStateMachineTransition_w5ewm"), "Fall", "Jump", SubResource("AnimationNodeStateMachineTransition_3oxys"), "Fall", "Idle", SubResource("AnimationNodeStateMachineTransition_deshh"), "Idle", "Fall", SubResource("AnimationNodeStateMachineTransition_vkkif"), "Jump", "Run", SubResource("AnimationNodeStateMachineTransition_t04p0"), "Run", "Jump", SubResource("AnimationNodeStateMachineTransition_qstqp")]
graph_offset = Vector2(-280, 87)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_dmbep"]
graph_offset = Vector2(-135, 143)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_5mhl2")
nodes/StateMachine/position = Vector2(80, 140)
node_connections = [&"output", 0, &"StateMachine"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_87p4x"]

[sub_resource type="Resource" id="Resource_6wghp"]
script = ExtResource("4_7jwm2")
spring_freq = 3.0
angular_damp = 5.0
force_scale = 50.0
linear_scale = 100.0
swing_span = 0.523599
gravity = Vector3(5, 5, 5)

[sub_resource type="Resource" id="Resource_0eaii"]
script = ExtResource("4_7jwm2")
spring_freq = 3.0
angular_damp = 5.0
force_scale = 50.0
linear_scale = 100.0
swing_span = 0.523599
gravity = Vector3(0, 0, 0)

[node name="stella_skin" type="Node3D"]
script = ExtResource("1_x2sb8")

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/../stella_imported")
tree_root = SubResource("AnimationNodeBlendTree_dmbep")
anim_player = NodePath("../stella_imported/AnimationPlayer")
"parameters/StateMachine/Fall/Fall & Hold/blend_amount" = 0.0
"parameters/StateMachine/Idle/Idle & Griddy/blend_amount" = 1.0
"parameters/StateMachine/Idle/Idle & Hold/blend_amount" = 0.0
"parameters/StateMachine/Jump/Jump & Hold/blend_amount" = 0.0
"parameters/StateMachine/Run/Filter Bangs Run/blend_amount" = 0.8
"parameters/StateMachine/Run/Run & Hold/blend_amount" = 0.0
"parameters/StateMachine/Run/Run & Running/blend_amount" = 0.0

[node name="stella_imported" parent="." instance=ExtResource("2_jgdfw")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)

[node name="Skeleton3D" parent="stella_imported/Stella" index="0"]
bones/1/position = Vector3(-3.44378e-07, 0, -2.28071)
bones/1/rotation = Quaternion(-0.707107, 5.33851e-08, 5.33851e-08, 0.707107)
bones/2/rotation = Quaternion(1.22308e-35, -1.72133e-21, -7.10543e-15, 1)
bones/3/rotation = Quaternion(0, 0, 0, 1)
bones/4/rotation = Quaternion(-4.23516e-22, 0, 1.43493e-42, 1)
bones/8/rotation = Quaternion(0.936542, 4.17893e-08, 1.11645e-07, 0.350554)
bones/10/rotation = Quaternion(7.09637e-08, -6.8201e-08, 0.999892, 0.0147011)
bones/13/rotation = Quaternion(-7.09637e-08, -6.8201e-08, 0.999892, -0.0147011)
bones/14/rotation = Quaternion(-0.0407764, -0.0333327, -0.720137, 0.69183)
bones/15/rotation = Quaternion(-4.65661e-10, -4.00178e-09, 1.68802e-09, 1)
bones/16/rotation = Quaternion(0.00476331, -1.62293e-05, -0.00167819, 0.999987)
bones/17/rotation = Quaternion(0.0100025, 7.84815e-05, 0.018895, 0.999771)
bones/18/rotation = Quaternion(-0.131882, -0.00059764, 0.0184564, 0.991093)
bones/19/rotation = Quaternion(-1.99361e-09, -2.91038e-09, -5.82077e-10, 1)
bones/20/rotation = Quaternion(2.91548e-07, 4.59608e-07, 5.6217e-07, 1)
bones/21/rotation = Quaternion(-0.0389222, -0.000188604, 0.00797146, 0.99921)
bones/22/rotation = Quaternion(-7.09551e-08, 4.55475e-09, 8.26549e-09, 1)
bones/23/rotation = Quaternion(1.34147e-07, 4.4718e-07, 4.50178e-07, 1)
bones/24/rotation = Quaternion(0.00617843, -1.37616e-05, 0.00289646, 0.999977)
bones/25/rotation = Quaternion(-1.74623e-10, 9.72932e-09, -1.02009e-08, 1)
bones/26/rotation = Quaternion(-5.22414e-09, 4.12707e-07, 4.04107e-07, 1)
bones/27/rotation = Quaternion(0.00319937, -2.70173e-05, 0.00371559, 0.999988)
bones/28/rotation = Quaternion(-1.2471e-08, -7.02221e-09, -2.85218e-09, 1)
bones/29/rotation = Quaternion(4.27826e-09, 5.16836e-07, 5.05126e-07, 1)
bones/30/rotation = Quaternion(0.678276, 0.00200589, -0.0648246, 0.73194)
bones/31/rotation = Quaternion(-9.95875e-07, -4.70114e-06, 1.03493e-07, 1)
bones/32/rotation = Quaternion(-0.0407764, 0.0333327, 0.720137, 0.69183)
bones/33/rotation = Quaternion(-4.65661e-10, 4.00178e-09, -1.68802e-09, 1)
bones/34/rotation = Quaternion(0.00476331, 1.62293e-05, 0.00167819, 0.999987)
bones/35/rotation = Quaternion(0.0100025, -7.84815e-05, -0.018895, 0.999771)
bones/36/rotation = Quaternion(-0.131882, 0.00059764, -0.0184564, 0.991093)
bones/37/rotation = Quaternion(-1.99361e-09, 2.91038e-09, 5.82077e-10, 1)
bones/38/rotation = Quaternion(2.91548e-07, -4.59608e-07, -5.6217e-07, 1)
bones/39/rotation = Quaternion(-0.0389222, 0.000188604, -0.00797146, 0.99921)
bones/40/rotation = Quaternion(-7.09551e-08, -4.55475e-09, -8.26549e-09, 1)
bones/41/rotation = Quaternion(1.34147e-07, -4.4718e-07, -4.50178e-07, 1)
bones/42/rotation = Quaternion(0.00617843, 1.37616e-05, -0.00289646, 0.999977)
bones/43/rotation = Quaternion(-1.74623e-10, -9.72932e-09, 1.02009e-08, 1)
bones/44/rotation = Quaternion(-5.22414e-09, -4.12707e-07, -4.04107e-07, 1)
bones/45/rotation = Quaternion(0.00319937, 2.70173e-05, -0.00371559, 0.999988)
bones/46/rotation = Quaternion(-1.2471e-08, 7.02221e-09, 2.85218e-09, 1)
bones/47/rotation = Quaternion(4.27826e-09, -5.16836e-07, -5.05126e-07, 1)
bones/48/rotation = Quaternion(0.678276, -0.00200589, 0.0648246, 0.73194)
bones/49/rotation = Quaternion(-9.95875e-07, 4.70114e-06, -1.03493e-07, 1)
bones/50/position = Vector3(0.37203, 0.000196934, -0.000172119)
bones/50/rotation = Quaternion(-0.00960258, -0.000146466, 0.99994, -0.0053205)
bones/51/rotation = Quaternion(-0.0528661, 0.000458006, -0.00147119, 0.9986)
bones/52/rotation = Quaternion(0.663811, -0.0301588, -0.0119145, 0.747197)
bones/53/rotation = Quaternion(0.0189327, -0.00805265, -0.00703798, 0.999764)
bones/54/position = Vector3(-0.37203, 0.000196934, -0.000172119)
bones/54/rotation = Quaternion(0.00960258, -0.000146466, 0.99994, 0.0053205)
bones/55/rotation = Quaternion(-0.0528661, -0.000458006, 0.00147119, 0.9986)
bones/56/rotation = Quaternion(0.663811, 0.0301588, 0.0119145, 0.747197)
bones/57/rotation = Quaternion(0.0189327, 0.00805265, 0.00703798, 0.999764)
bones/58/position = Vector3(2.43053, -0.0106509, -3.65131)
bones/58/rotation = Quaternion(-0.706103, -0.0376578, 0.0376582, 0.706103)
bones/59/position = Vector3(-2.43053, -0.0106509, -3.65131)
bones/59/rotation = Quaternion(-0.706103, 0.0376582, -0.0376578, 0.706103)

[node name="hairFrontBang" parent="stella_imported/Stella/Skeleton3D" index="0"]
transform = Transform3D(0.608709, -0.00174433, 0.00151041, 0.00173623, 0.608702, 0.00325754, -0.00151972, -0.00325313, 0.608702, -0.629907, 4.4195, 0.994678)

[node name="hairFrontBang" parent="stella_imported/Stella/Skeleton3D/hairFrontBang" index="0"]
transform = Transform3D(1, 7.98362e-20, 0, 9.635e-21, 1, 1.81899e-12, 0, -3.63798e-12, 1, 0, -5.72205e-06, 0.287985)

[node name="hair" parent="stella_imported/Stella/Skeleton3D" index="5"]
surface_material_override/0 = SubResource("ShaderMaterial_87p4x")

[node name="BoneAttachment3D" parent="stella_imported/Stella/Skeleton3D" index="12"]
transform = Transform3D(-0.0049914, -0.999844, 0.0169113, 0.99445, -0.00318573, 0.105163, -0.105093, 0.0173423, 0.994311, -2.43053, 1.3706, -0.0106509)

[node name="BoneAttach" type="Node3D" parent="stella_imported/Stella/Skeleton3D/BoneAttachment3D" index="0"]
transform = Transform3D(1, 5.82077e-10, 1.49012e-08, -2.32831e-10, 1, 0, 0, 0, 1, -0.281793, 0.263992, -0.0343883)

[node name="DMWBWiggleRotationModifier3D" type="SkeletonModifier3D" parent="stella_imported/Stella/Skeleton3D" index="13"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.960635, 0.25659, -0.106497, -0.277747, 0.895361, -0.348116, 0.0060302, 0.363992, 0.931383, 1.06061, 4.68263, 0.581114)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("3_28cev")
bone_name = "antenea1_left"
properties = ExtResource("4_rwrfb")
force_local = Vector3(0, 0, 5.76)
handle_distance = 1.6

[node name="DMWBWiggleRotationModifier3D2" type="SkeletonModifier3D" parent="stella_imported/Stella/Skeleton3D" index="14"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.960635, -0.25659, 0.106497, 0.277747, 0.895361, -0.348116, -0.0060302, 0.363992, 0.931383, -1.06061, 4.68263, 0.581114)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("3_28cev")
bone_name = "antenea1_right"
properties = ExtResource("4_rwrfb")
force_local = Vector3(0, 0, 5.76)
handle_distance = 1.6

[node name="DMWBWiggleRotationModifier3D3" type="SkeletonModifier3D" parent="stella_imported/Stella/Skeleton3D" index="15"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.99992, 0.0126344, 0.000112857, 0.00945535, -0.742339, -0.669958, -0.00838071, 0.669905, -0.742399, 4.97838e-14, 4.99417, 0.792917)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 0.3
script = ExtResource("3_28cev")
bone_name = "frontbang"
properties = SubResource("Resource_6wghp")
handle_distance = 1.0

[node name="DMWBWiggleRotationModifier3D4" type="SkeletonModifier3D" parent="stella_imported/Stella/Skeleton3D" index="16"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(-0.999568, -0.029399, 1.39907e-07, 0.029399, -0.999568, -1.38474e-07, 1.43917e-07, -1.34301e-07, 1, 1.53689, 3.82606, 1.45993e-07)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("3_28cev")
bone_name = "sidebang_left"
properties = SubResource("Resource_0eaii")
handle_distance = 2.0

[node name="DMWBWiggleRotationModifier3D5" type="SkeletonModifier3D" parent="stella_imported/Stella/Skeleton3D" index="17"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(-0.999568, 0.029399, -1.39907e-07, -0.029399, -0.999568, -1.38474e-07, -1.43917e-07, -1.34301e-07, 1, -1.53689, 3.82606, 1.45993e-07)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("3_28cev")
bone_name = "sidebang_right"
properties = SubResource("Resource_0eaii")
handle_distance = 2.0

[editable path="stella_imported"]
